# MDMC-NEP-top-level-ontology

./: .gitignore  LICENSE  PMDCO_V3_DEVICE_OBJECT_STRUCTURE.md  PRIMA_TO_PMDCO_V3_MIGRATION_PLAN.md  README.md  SPARQL_Project  main.py  mdmc-nep-top-level-ontology-doc.html  mdmc-nep-top-level-ontology.jsonld  mdmc-nep-top-level-ontology.nt  mdmc-nep-top-level-ontology.owl  mdmc-nep-top-level-ontology.rdf  mdmc-nep-top-level-ontology.ttl  pyproject.toml
.github/workflows/: skos-monitor.yml
CQs/: CQs.md  Data.md
CQs/v_2_0/: CQs.md
MNO/: mno-complete.owl
MNO/complete/ver_1_0/: mno-complete.owl  mno-complete.ttl
MNO/core/ver_1_0/: index.html  mno-core.owl  mno-core.ttl
MNO/data-analysis-lifecycle/ver_1_0/: index.html  mno-data-analysis-lifecycle.owl  mno-data-analysis-lifecycle.ttl
MNO/dataset/ver_1_0/: index.html  mno-dataset.owl  mno-dataset.ttl
MNO/experiment/ver_1_0/: index.html  mno-experiment.owl  mno-experiment.ttl
PRIMA/complete/ver_1_0/: index.html  prima-complete.jsonld  (+1 more)
data/: STRAS-mapping.properties  STRAS-mapping.ttl
docs/: core_module_documentation_summary.md  index.html
mdmc-glossary/: mdmc-glossary-terms.md
monitor_utils/: UPDATE_WEBVOWL.md  __init__.py  compare_owl_skos.py  regenerate_serializations.py  update_webvowl_json.py
monitor_utils/prima_skos_monitor/: __init__.py  analyzer.py  cli.py  comparator.py  downloader.py  reporter.py
monitor_utils/skos_snapshots/: .gitkeep
python-script/: rdf_serializer.py
use-cases/Herbie-ELN/: README.md  herbie.ttl  prima-core.ttl  prima-experiment.ttl
use-cases/STRAS-mapping/: README.md
(+113 files in other folders)
