[project]
name = "mdmc-nep-top-level-ontology"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "rdflib>=7.4.0",
    "reportlab>=4.4.4",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "PyGithub>=2.1.1",
    "pylode>=3.2.1",
]
